# omni

./: .gitattributes  .gitignore  .gitmodules  .prettierignore  ARCHITECTURE.md  Cargo.toml  LICENSE  Makefile  README.md  STRUCTURE.md  build.ps1  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
crates/host/: CONTRIBUTING.md  Cargo.toml  build.rs
crates/host/resources/: feather.css
crates/host/src/: atomic.rs  config.rs  etw.rs  guard.rs  hotkey.rs  lib.rs  main.rs  scanner.rs  ul_renderer.rs  watcher.rs  win32.rs  ws_server.rs
crates/host/src/ipc/: bitmap_writer.rs  mod.rs
crates/host/src/omni/: bootstrap.js  default.rs  expression.rs  fs_dispatcher.rs  history.rs  html_builder.rs  interpolation.rs  js_bootstrap.rs  mod.rs  overlay_fs.rs  parser.rs  pipeline_e2e.rs  preview.rs  sensor_map.rs  trust_filter.rs  types.rs  ul_string.rs  units.rs  validation.rs  view_trust.rs
crates/host/src/omni/assets/: mod.rs  reference_overlay.omni
crates/host/src/sensors/: cpu.rs  cpu_temp.rs  gpu.rs  hwinfo.rs  mod.rs  ram.rs
crates/host/src/share/: cache.rs  client.rs  dep_resolver.rs  error.rs  handlers.rs  identity_metadata.rs  install.rs  mod.rs  moderation.rs  preview.rs  preview_impl.rs  progress.rs  publish_index.rs  publish_state.rs  registry.rs  save_preview.rs  sidecar.rs  thumbnail.rs  tofu.rs  upload.rs  ws_messages.rs
crates/host/src/share/thumbnail/: bundle.rs  (+2 more)
crates/host/src/workspace/: atomic_dir.rs  file_api.rs  fork.rs  mod.rs  overlay_resolver.rs  structure.rs
crates/host/tests/: bootstrap_ul_smoke.rs  build_manifest_resource_kinds.rs  bundle_update_apply_e2e.rs  client_author.rs  custom_thumbnail_wiring.rs  dep_resolver.rs  dpi_scale_view_recreation.rs  fork_integration.rs  guard_factory.rs  guard_factory_dev_no_guard.rs  handle_list_search.rs  identity_e2e.rs  identity_metadata.rs  install_end_to_end.rs  install_tofu_and_recovery.rs  install_tofu_uses_author_name.rs  moderation_onnx.rs  moderation_uninit.rs  overlay_sandbox_smoke.rs  pack_stage_classification.rs  preview_protocol.rs  preview_save_hook.rs  publish_index.rs  publish_lookup_workspace.rs  publish_state_persists_after_upload.rs  save_preview_wiring.rs  share_error_carving.rs  share_upload_integration.rs  sidecar_io.rs  thumbnail_integration.rs  ul_concurrent_render.rs  upload_pack_integration.rs  upload_pack_orphan_image.rs  ws_bridge_integration.rs  ws_identity_handlers.rs  ws_regenerate_preview.rs
crates/host/tests/common/: mod.rs
crates/identity/: Cargo.toml
crates/identity/src/: atomic.rs  bundle.rs  error.rs  format.rs  http_jws.rs  keypair.rs  lib.rs  tofu.rs  wasm.rs  wasm_jws_core.rs
crates/identity/tests/: bundle_unit.rs  generate_and_write.rs  import_encrypted_and_write.rs  integration.rs  jws_native_wasm_parity.rs
crates/moderation/: Cargo.toml
crates/moderation/resources/: MODELS.toml
crates/moderation/src/: lib.rs  nsfw_classifier.rs  nudenet.rs
crates/moderation/tests/: load_model.rs
crates/omni-bundle/: Cargo.toml
crates/omni-bundle/src/: error.rs  hash.rs  lib.rs  manifest.rs  pack.rs  path.rs  unpack.rs
crates/omni-bundle/tests/: determinism.rs  golden_fixture.rs  integration_fuzz.rs  integration_realistic.rs  integration_schema.rs  negative.rs  property.rs  roundtrip.rs
crates/omni-bundle/tests/fixtures/: golden-hash.hex  mod.rs
crates/omni-guard/: Cargo.toml  README.md
crates/omni-guard/src/: antidebug.rs  device.rs  disabled.rs  integrity.rs  lib.rs  real.rs  traits.rs  types.rs  vm.rs
crates/omni-guard/tests/: contract.rs  enforcement_mode.rs  integrity_negative.rs  real_guard.rs  serde_roundtrip.rs
crates/omni-identity/: Cargo.toml
crates/omni-identity/src/: acl.rs  atomic.rs  bundle.rs  emojilist.rs  emojilist_data.rs  error.rs  error.rs.bak  fingerprint.rs  format.rs  http_jws.rs  keypair.rs  lib.rs  tofu.rs  wasm.rs  wasm_jws_core.rs  wordlist.rs
crates/omni-identity/tests/: bundle_unit.rs  integration.rs  jws_native_wasm_parity.rs
crates/overlay/: Cargo.toml
crates/overlay/src/: main.rs
crates/sanitize/: Cargo.toml
crates/sanitize/src/: error.rs  lib.rs  magic.rs  omni_parser.rs  wasm.rs
crates/sanitize/src/beautify/: css.rs  error.rs  html.rs  mod.rs  omni.rs
crates/sanitize/src/handlers/: font.rs  image.rs  mod.rs  overlay.rs  theme.rs
crates/sanitize/tests/: error_variants.rs  handler_font.rs  handler_image.rs  handler_overlay.rs  handler_theme.rs  integration_bundle_pipeline.rs  magic.rs  property_sanitize.rs
crates/sanitize/tests/common/: mod.rs
crates/test-harness/: Cargo.toml  README.md
crates/test-harness/src/: factories.rs  lib.rs  reference_oracle.rs
host/: Cargo.toml
host/resources/: feather.css
host/src/: config.rs  error.rs  main.rs  scanner.rs  watcher.rs  widget_builder.rs  win32.rs  ws_server.rs
host/src/injector/: mod.rs
host/src/ipc/: mod.rs
host/src/omni/: css.rs  default.rs  easing.rs  expression.rs  flat_tree.rs  icon_font.rs  interpolation.rs  layout.rs  mod.rs  parser.rs  reactive.rs  resolver.rs  sensor_map.rs  transition.rs  types.rs  validation.rs
host/src/sensors/: cpu.rs  cpu_temp.rs  gpu.rs  mod.rs  ram.rs
host/src/workspace/: file_api.rs  mod.rs  overlay_resolver.rs  structure.rs
overlay-dll/: Cargo.toml
overlay-dll/src/: frame_stats.rs  hook.rs  lib.rs  logging.rs  present.rs  renderer.rs  shaders.rs  state_backup.rs
overlay-dll/src/ipc/: mod.rs
tools/admin/: Cargo.toml  README.md
tools/admin/src/: audit.rs  auth.rs  client.rs  lib.rs  main.rs
tools/admin/src/commands/: artifact.rs  keygen.rs  pubkey.rs  reports.rs  review.rs  stats.rs
tools/admin/tests/: artifact_cli.rs  device_cli.rs  e2e_flows.rs  jws_roundtrip.rs  key_file_permissions.rs  keygen.rs  limits_cli.rs  pubkey_cli.rs  reports_cli.rs  review_stats_cli.rs  vocab_cli.rs
tools/admin/tests/common/: mod.rs
tools/dev-orchestrator/: Cargo.toml
tools/dev-orchestrator/src/: admin.rs  fixtures.rs  identity_mgmt.rs  kill.rs  main.rs  orchestrator.rs  paths.rs  reset.rs  seed.rs  shell.rs
tools/fetch-models/: Cargo.toml
tools/fetch-models/src/: main.rs
(+536 files in other folders)
