[workspace]
members = [
    "crates/shared",
    "crates/host",
    "crates/overlay-exe",
    "crates/ultralight-sys",
    "crates/omni-sanitize",
    "crates/omni-bundle",
    "crates/omni-guard-trait",
    "crates/omni-identity",
    "crates/omni-admin",
    "tools/integrity-hash",
]
resolver = "2"

# Private-crate resolution — retro D-004-K. `omni-host` declares `omni-guard`
# as an optional git-URL dep pointing at the private repo; this patch swaps
# the default resolution target to the public stub at `stubs/omni-guard/`
# so contributors without SSH access to the private repo still build.
# Release CI overrides this patch via `--config` to point at the real crate.
[patch."ssh://git@github.com/djowinz/omni-guard.git"]
omni-guard = { path = "stubs/omni-guard" }

# Paired with the omni-guard patch above: the private omni-guard crate
# depends on `omni-guard-trait` via a git URL pointing at this same repo
# (branch = "theme-sharing"). When release CI resolves the real private
# crate, this patch redirects its trait dep back to the local workspace
# crate, collapsing the two-copy problem cargo would otherwise hit.
# Harmless for default builds — nothing in the workspace consumes from
# this git URL except via the patched private crate.
[patch."ssh://git@github.com/djowinz/omni.git"]
omni-guard-trait = { path = "crates/omni-guard-trait" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
