[workspace]
resolver = "2"
members = [
    "crates/host",
    "crates/overlay",
    "crates/shared",
    "crates/bundle",
    "crates/sanitize",
    "crates/identity",
    "crates/moderation",
    "crates/omni-guard",
    "crates/test-harness",
    "crates/ultralight-sys",
    "tools/admin",
    "tools/dev-orchestrator",
    "tools/fetch-models",
    "tools/integrity-hash",
]

[workspace.package]
version = "1.5.1"
edition = "2021"
license = "GPL-3.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
