[package]
name = "omni-host"
version = "0.1.0"
edition = "2021"

[lib]
name = "omni_host"
path = "src/lib.rs"

[[bin]]
name = "omni-host"
path = "src/main.rs"

[features]
default = []
# `guard` enables the RealGuard wiring. Resolution of the `omni-guard` crate
# is handled by the workspace-level `[patch]` (retro D-004-K): default
# contributor builds resolve to `stubs/omni-guard/` (no-op behavior); release
# CI overrides the patch via `--config` to pull the real private crate.
guard = ["dep:omni-guard"]

[dependencies]
omni-guard-trait = { path = "../omni-guard-trait" }
omni-guard = { git = "ssh://git@github.com/djowinz/omni-guard.git", branch = "main", optional = true }
omni-shared = { path = "../shared" }
ts-rs = { version = "10", features = ["serde-compat"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = "3"
sysinfo = "0.35"
wmi = "0.14"
tungstenite = "0.26"
quick-xml = "0.37"
notify = "7"
regex-lite = "0.1"
ultralight-sys = { path = "../ultralight-sys" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart", "stream"] }
moka = { version = "0.12", features = ["future"] }
backon = "1"
url = "2"
thiserror = "1"
omni-identity = { path = "../omni-identity" }
omni-bundle = { path = "../omni-bundle" }
futures = "0.3"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
tokio = { version = "1", features = ["sync", "rt", "macros", "rt-multi-thread"] }
walkdir = "2"
semver = { version = "1", features = ["serde"] }
omni-sanitize = { path = "../omni-sanitize" }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_IO",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Time",
    "Win32_System_Performance",
]
