[package]
name = "identity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[features]
default = []
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:js-sys", "getrandom/js", "bundle/wasm"]

[dependencies]
thiserror = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
argon2 = "0.5"
chacha20poly1305 = { version = "0.10", features = ["alloc"] }
sha2 = "0.10"
hmac = "0.12"
zeroize = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
subtle = "2"
base64 = "0.22"
bundle = { path = "../bundle" }
getrandom = { version = "0.2", default-features = false }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3", optional = true }

# jsonwebtoken pulls `ring` which requires a C toolchain (clang) to cross-compile
# to `wasm32-unknown-unknown`. The Worker WASM build doesn't need jsonwebtoken —
# the wasm path in `src/wasm.rs` hand-rolls JWS compact EdDSA via `ed25519-dalek`
# directly. Keep it native-only so the wasm target builds without system clang.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jsonwebtoken = "9"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"
ed25519-dalek = "2"
jsonwebtoken = "9"
bundle = { path = "../bundle" }
serde = { version = "1", features = ["derive"] }
semver = { version = "1", features = ["serde"] }
sha2 = "0.10"
