[package]
name = "omni-bundle"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_jcs = "0.2"
semver = { version = "1", features = ["serde"] }
sha2 = "0.10"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
hex = "0.4"

[dev-dependencies]
proptest = "1"
jsonschema = { version = "0.26", default-features = false }
