[package]
name = "omni-guard"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Abuse-prevention primitives for Omni: device fingerprint, anti-debug, VM detection, PE .text self-integrity. Probe-only — no signing."

[features]
default = []
# strict-integrity: replace option_env! with env! for the OMNI_GUARD_TEXT_SHA256
# build-time constant. Release CI enables this; dev builds do not (so dev
# builds skip integrity enforcement instead of failing to compile).
strict-integrity = []
# dev-no-guard: enables the DisabledGuard impl + the host-side bypass branch
# in `crates/host/src/guard.rs::make_guard`. Use ONLY for local debugger
# sessions; release builds MUST NOT enable this feature.
dev-no-guard = []
serde = ["dep:serde"]

[dependencies]
sha2 = "0.10"
raw-cpuid = "11"
goblin = "0.8"
tracing = "0.1"
thiserror = "1"
serde = { version = "1", features = ["derive"], optional = true }
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_System_SystemInformation",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_System_Kernel",
    "Wdk_System_Threading",
] }

[dev-dependencies]
serde_json = "1"

# `contract` and `enforcement_mode` both unconditionally `use
# omni_guard::DisabledGuard;`. DisabledGuard is feature-gated behind
# `dev-no-guard` (see lib.rs). Without `required-features` here,
# `cargo test -p omni-guard` (no features) fails to compile with a
# confusing "unresolved import" error. The workspace path masks this
# because test-harness's omni-guard dep activates the feature via cargo
# unification — but contributors working on omni-guard in isolation hit
# the failure. Mirrors the integrity_negative pattern below.
[[test]]
name = "contract"
required-features = ["dev-no-guard"]

[[test]]
name = "enforcement_mode"
required-features = ["dev-no-guard"]

# Negative-integrity test (retro D-004-I) — dedicated test target that only
# compiles with strict-integrity enabled.
[[test]]
name = "integrity_negative"
required-features = ["strict-integrity"]
