[package]
name = "omni-identity"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
thiserror = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
argon2 = "0.5"
chacha20poly1305 = { version = "0.10", features = ["alloc"] }
sha2 = "0.10"
hmac = "0.12"
zeroize = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
subtle = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
] }

[dev-dependencies]
tempfile = "3"
