[package]
name = "test-harness"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
arc-swap = "1"
bundle = { path = "../bundle" }
host = { package = "host", path = "../host" }
identity = { path = "../identity" }
# test-harness constructs DisabledGuard unconditionally. DisabledGuard is
# gated behind `dev-no-guard` in omni-guard, so we MUST enable that feature
# here. Cargo unifies features across the build graph: when any crate is
# built with test-harness in its dep graph (e.g. `cargo test -p host`),
# omni-guard ends up with `dev-no-guard` enabled and DisabledGuard becomes
# reachable everywhere — including `#[cfg(test)]` blocks in `crates/host/src/`.
omni-guard = { path = "../omni-guard", features = ["dev-no-guard"] }
semver = "1"
sha2 = "0.10"
tempfile = "3"
tokio-util = { version = "0.7", features = ["rt"] }
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
