[package]
name = "fetch-models"
version = "0.1.0"
edition = "2021"
publish = false
description = "Download + verify the bundled NSFW moderation ONNX models referenced in crates/moderation/resources/MODELS.toml. Idempotent — skips files already present and matching the manifest hash. Canonical invocation: `cargo run --release -p fetch-models`."

[dependencies]
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
ureq = { version = "2", default-features = false, features = ["tls"] }
